--- a/style.css
+++ b/style.css
@@ -1,22 +1,53 @@
 * {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 1em;
+  /* font-size: 1em; */
+  font-style: italic;
   color: #181818;
   text-align: center;
   /* the following is to prevent user from selecting text */
+  user-select: none;
   -webkit-user-select: none;
   -webkit-touch-callout: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  user-select: none;
   background-color: #b3b3b3;
+}
+
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  /* border: 30px auto; */
+  /* margin-left: 200px; */
+  /* margin-right: 200px; */
+  /* width: 650px; */
+  /* height: 650px; */
+  /* background-color: red; */
 }
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-auto-rows: 2em;
+  justify-content: center;
+  /* width: 960px; */
+  /* height: 960px; */
+  /* max-width: 960px; */
+  /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; */
+  grid-template-columns: repeat(16, 1fr);
+  /* grid-template-columns: 100px 50px 100px; */
+  /* grid-auto-rows: 2em; */
   grid-gap: 0.2em;
+  /* margin: 100px; */
+  margin-left: 200px;
+  margin-right: 200px;
+  width: 550px;
+  height: 550px;
+  /* justify-content: center; */
+  /* align-content: center; */
+  /* border: 100px; */
+  /* grid-template-rows: 80px auto 80px;
+  column-gap: 10px;
+  row-gap: 15px; */
 }
 
 .square {
