--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@
   background-color: #b3b3b3;
 }
 
+.topRow {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
 .box {
   display: flex;
   justify-content: center;
@@ -36,7 +42,7 @@
   grid-template-columns: repeat(16, 1fr);
   /* grid-template-columns: 100px 50px 100px; */
   /* grid-auto-rows: 2em; */
-  grid-gap: 0.2em;
+  /* grid-gap: 0.2em; */
   /* margin: 100px; */
   margin-left: 200px;
   margin-right: 200px;
@@ -52,6 +58,7 @@
 
 .square {
   background-color: #181818;
+  border: 0.1em solid grey;
 }
 
 /* .square:hover {
